# a2ui-example

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  GEMINI.md  README.md  cloudbuild.yaml  pyproject.toml
data/: greeting.json.j2  mock_policies.json  show_dropdown.json.j2  submit_selection.json.j2
renderer/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
renderer/src/: index.html
renderer/src/app/: app.config.ts  app.css  app.html  app.ts  chat.service.ts  markdown.pipe.ts
src/adk2/: __init__.py  agent.py  agent_executor.py  main.py  shared.py
src/adk2/.adk/: session.db
src/adk2/models/: __init__.py  rag_model.py
src/adk2/subagents/: __init__.py  rag_agent.py
src/utils/: validate_a2ui_json.py
terraform/: main.tf  terraform.tfvars  variables.tf
tests/: test_rag_agent.py
